--- a/src/app/edit-rfp/edit-rfp.component.html
+++ b/src/app/edit-rfp/edit-rfp.component.html
@@ -1,5 +1,5 @@
 <div class="card edit-rfp-comp">
-  <button class="btn btn-danger"><i class="fa fa-times"></i></button>
+  <button class="btn btn-danger" (click)="onNoClick()"><i class="fa fa-times"></i></button>
   <div class="modal-dialog admin-popup">
     
     <div class="modal-content popupmodel">
