--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -173,7 +173,7 @@
                 <div class="social-link pull-right">
                     <a [routerLink]="['/terms']" class="footer-link-border">Terms &amp; Conditions</a>
                     <a [routerLink]="['/privacy-policy']" class="footer-link-border">Privacy Policy</a>
-                    <a href="#" class="">Intellectual Property</a>
+                    <!-- <a href="#" class="">Intellectual Property</a> -->
                 </div>
             </div>
         </div>
