--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -281,7 +281,7 @@
                       <i class="far fa-newspaper"></i> RFP Preferences</a>
                   </li>
                   <li *ngIf="check_login()">
-                      <a routerLink="/bid-notifications">
+                      <a routerLink="/notifications">
                           <i class="fa fa-bell"></i>
                         Bid Notifications</a>
                     </li>
