--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -104,7 +104,7 @@
             </a>
           </li>
           <li>
-            <a (click)="catrfp(item.category)">
+            <a routerLink="/find-rfp">
               <i class="material-icons">polymer</i>
               <h4>RFPs</h4>
               <p>Proven solutions for a change.</p>
@@ -256,7 +256,7 @@
         </div>
       </div>
       <div class="text-center col-md-12">
-        <a routerLink="/latest-rfp ">
+        <a routerLink="/latest-rfp">
           <button  type="button" class="btn btn-lg btn-rose" title="VIEW All LATEST RFPs" >View All Latest RFPs
             <i class="fa fa-arrow-right" aria-hidden="true"></i>
           </button>
@@ -983,7 +983,7 @@
             </article>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <article class="icon-box">
+            <article class="icon-box" routerLink="/pricing">
               <i class="material-icons">blur_on</i>
               <h4>Package of your choice</h4>
               <p>We offer an assortment of bundles and administration choices, making the correct blend for each size
