--- a/src/app/admin/profile/profile.component.html
+++ b/src/app/admin/profile/profile.component.html
@@ -13,6 +13,9 @@
                                 <mat-form-field class="example-full-width">
                                     <input matInput placeholder="First Name" type="text" id="firstname" formControlName="firstname"
                                         [(ngModel)]="profile.first_name" value="{{profile.first_name}}" required>
+                                        <mat-error *ngIf="register.controls.firstname.hasError('pattern')">
+                                            Only Alphabets
+                                          </mat-error>
                                      <mat-error *ngIf="register.controls.firstname.value == ''">
                                         <strong>First name cannot be empty</strong>
                                     </mat-error>
@@ -23,7 +26,9 @@
                             <div class="form-group label-floating" [ngClass]="displayFieldCss(register, 'lastname')">
                                 <mat-form-field class="example-full-width">
                                     <input matInput placeholder="Last Name" type="text" id="lastname" formControlName="lastname"
-                                        [(ngModel)]="profile.last_name" value="{{profile.last_name}}" required>
+                                        [(ngModel)]="profile.last_name" value="{{profile.last_name}}" required> <mat-error *ngIf="register.controls.lastname.hasError('pattern')">
+                                            Only Alphabets
+                                          </mat-error>
                                     <mat-error *ngIf="register.controls.lastname.value == ''">
                                         <strong>Last name cannot be empty</strong>
                                     </mat-error>
@@ -62,7 +67,12 @@
                                         <mat-form-field>
                                             <input matInput type="text" id="zipcode" (ngModelChange)="zipcodeCheck(zipcode1.value)"
                                                 #zipcode1 [(ngModel)]="personal.zipcode" formControlName="zipcode" value="{{personal.zipcode}}"
-                                                placeholder="Zip Code" maxlength="5" required />
+                                                placeholder="Zip Code" maxlength="5" required /> <mat-error class="border-right" *ngIf="register.controls.zipcode.hasError('pattern')">
+                                                    Only Numbers
+                                                  </mat-error>
+                                                  <mat-error *ngIf="register.controls.zipcode.errors?.minlength">
+                                                    Only 5 Numbers.
+                                                  </mat-error>
                                             <mat-error *ngIf="register.controls.zipcode.value == ''">
                                                 <strong>Zip Code cannot be empty</strong>
                                             </mat-error>
