--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -165,7 +165,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <div *ngIf="search == true" class="text-center">
+                        <div *ngIf="search == true || item=='0'" class="text-center">
                             <i class="fa fa-exclamation-triangle"></i>
                             <h3 class="text-center">No Record Found</h3>
                         </div>
