--- a/src/app/edit-rfp/edit-rfp.component.html
+++ b/src/app/edit-rfp/edit-rfp.component.html
@@ -57,11 +57,12 @@
               <div class="input-group">
 
                 <mat-form-field>
-                  <input matInput placeholder="Agency" name="agency" [(ngModel)]="data.agency"  />
-                 
+                  <input matInput placeholder="City" name="city" [(ngModel)]="data.city"/>
+
                 </mat-form-field>
               </div>
             </div>
+
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
 
@@ -76,15 +77,18 @@
                 </mat-select>
                 </mat-form-field>
               </div>
+              <button class="btn btn-primary mg-0">Others</button>
             </div>
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
 
                 <mat-form-field>
-                  <input matInput placeholder="Category"  name="category" [(ngModel)]="data.category"  (change)="subcategory(data.category)"/>
+                  <input matInput placeholder="Agency" name="agency" [(ngModel)]="data.agency"  />
+                 
                 </mat-form-field>
               </div>
             </div>
+
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
 
@@ -98,13 +102,13 @@
                 </mat-select>
                 </mat-form-field>
               </div>
+              <button class="btn btn-primary mg-0">Others</button>
             </div>
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
 
-                <mat-form-field class="category-edit-rfp">
-                  <input matInput placeholder="Sub Category" name="subcat" [(ngModel)]="data.subcat"  />
-                 
+                <mat-form-field>
+                  <input matInput placeholder="Category"  name="category" [(ngModel)]="data.category"  (change)="subcategory(data.category)"/>
                 </mat-form-field>
               </div>
             </div>
@@ -122,7 +126,18 @@
                 </mat-select>
                 </mat-form-field>
               </div>
+              <button class="btn btn-primary mg-0">Others</button>
             </div>
+            <div class="col-md-6 col-sm-6">
+              <div class="input-group">
+
+                <mat-form-field class="category-edit-rfp">
+                  <input matInput placeholder="Sub Category" name="subcat" [(ngModel)]="data.subcat"  />
+                 
+                </mat-form-field>
+              </div>
+            </div>
+           
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
 
@@ -168,15 +183,7 @@
                 </mat-form-field>
               </div>
             </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="City" name="city" [(ngModel)]="data.city"/>
-
-                </mat-form-field>
-              </div>
-            </div>
+           
             <div class="col-md-6 col-sm-6">
               <div class="input-group margin-zero1">
 
