--- a/src/app/edit-rfp/edit-rfp.component.scss
+++ b/src/app/edit-rfp/edit-rfp.component.scss
@@ -4,3 +4,7 @@
 .mat-select-panel .mat-option{
     font-size: 16px !important;
 }
+.btn-primary.mg-0{
+    padding: 0 10px;
+    font-size: 13px;
+}
