--- a/src/assets/css/demo.css
+++ b/src/assets/css/demo.css
@@ -28,8 +28,8 @@ font-weight: 600 !important;
 }
 .edit-rfp-comp >button{
     position: absolute;
-    right: -15px;
-    top: -15px;
+    right: 0;
+    top: 15px;
     padding: 20px 25px;
     z-index: 9;
 }
