--- a/src/app/rfp-as-service/rfp-as-service.component.html
+++ b/src/app/rfp-as-service/rfp-as-service.component.html
@@ -69,7 +69,7 @@
     <div class="col-md-4" style="color: #000;">
       <p class="lead">If you need help before, during or after your purchase, this is the place to be. Please use below contact details for all your pre-sale questions, contact questions.</p>
       <hr />
-      <button href="mailto:info@rfpgurus.com" class="btn btn-rose email-us" style="width: 100%;">email us</button>
+      <button routerLink="/contact-us" class="btn btn-rose email-us" style="width: 100%;">email us</button>
       
     
       </div>
