--- a/src/app/all/all-category/all-category.component.html
+++ b/src/app/all/all-category/all-category.component.html
@@ -39,13 +39,17 @@
               <h3><i class="fas fa-list-alt" aria-hidden="true"></i>All Categories</h3>
             </div>
             <div class="col-sm-4 text-right">
-              <input type="text" [(ngModel)]="catsearch" [ngModelOptions]="{standalone: true}" placeholder="Search RFPs"
+              <input type="text" [(ngModel)]="catsearch" #qury1 (change)=filter(qury1.value) [ngModelOptions]="{standalone: true}" placeholder="Search RFPs"
                 class="search-allstates">
               <i class="fas fa-search s-icon-all-states" area-hidden="true"></i>
             </div>
           </div>
         </div>
         <div class="row">
+            <div class="col-sm-12 text-center" *ngIf="item== 0 ">
+                <i class="fa fa-exclamation-triangle"></i>
+                <h3 class="text-center">No Record Found</h3>
+            </div>
           <div class="col-sm-4 col" *ngFor="let rfpcat of cat | filter:catsearch; let i = index">
             <a class="curser-pointer" (click)="catrfp(rfpcat.category_name)"><i class="fab fa-superpowers" aria-hidden="true"></i>{{rfpcat.category_name}}</a>
             <i class="fa fa-plus pull-right view-more state collapsed" data-toggle="collapse" attr.data-target="#View{{i}}" (click)="subcategory(rfpcat.category_name)"></i>
