--- a/src/app/all/all-state/all-state.component.html
+++ b/src/app/all/all-state/all-state.component.html
@@ -5,13 +5,13 @@
     <i (click)="focusInput()">focus</i>
     <div class="container">
       <div class="search-holder">
-        <input ngAutoFocus type="search" name=querysearch [(ngModel)]="query" #querysearch="ngModel" (keydown)=filter(query)
-          placeholder="Search RFPs" id="textsearch">
+        <input  type="search" name=query [(ngModel)]="query" #qure1  (change)="filter(qure1.value)"
+          placeholder="Search RFPs">
         <i class="fa fa-close" id="iconClose" (click)="closeSearch()"></i>
       </div>
       <div class="search-results" *ngIf="Rfp">
         <ul class="list-normal">
-          <li *ngIf="!Rfp">
+          <li *ngIf="item==0">
             <p>No results found. Please use keywords.</p>
           </li>
           <span *ngFor="let item of Rfp">
@@ -19,6 +19,7 @@
               <a class="curser-pointer" [routerLink]="['/state']" [queryParams]="{ state: item.state}"> <i class="material-icons">arrow_forward</i>
                 {{item.state}} </a>
             </li>
+           
           </span>
         </ul>
       </div>
@@ -38,16 +39,21 @@
               <h3><i class="fa fa-list-alt" aria-hidden="true"></i>All States</h3>
             </div>
             <div class="col-sm-4 text-right">
-              <input type="text" [(ngModel)]="statesearch" [ngModelOptions]="{standalone: true}" placeholder="Search RFPs"
+              <input type="text" name=query [(ngModel)]="statesearch" #qure1  (change)="filter(qure1.value)" [ngModelOptions]="{standalone: true}" placeholder="Search RFPs"
                 class="search-allstates">
               <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
             </div>
           </div>
         </div>
+        <div class="col-sm-12 text-center" *ngIf="item== 0 ">
+            <i class="fa fa-exclamation-triangle"></i>
+            <h3 class="text-center">No Record Found</h3>
+        </div>
         <div *ngFor="let rfpstate of state | filter:statesearch" class="col-sm-4 col-lg-4 col-md-4 col-xs-12 col">
           <a class="curser-pointer" [routerLink]="['/state']" [queryParams]="{ state: rfpstate.state}">
             <img class="sh-state-img" src="https://storage.rfpgurus.com/bplrfpgurus/{{rfpstate.icon_image}}" alt="img">
             <p>{{rfpstate.state}}</p>
+          
           </a>
         </div>
         <div class="clearfix"></div>
