--- a/src/app/all/all-agencies/all-agencies.component.html
+++ b/src/app/all/all-agencies/all-agencies.component.html
@@ -44,10 +44,13 @@
             </div>
             <div class="col-sm-4 col-xs-12 text-right tab-text-center">
               <input type="text" [(ngModel)]="agensearch" [ngModelOptions]="{standalone: true}" placeholder="Search RFPs"
-                class="search-allstates">
+                class="search-allstates" #qury1 (change)="filter(qury1.value)">
               <i class="fas fa-search s-icon-all-states" area-hidden="true"></i>
             </div>
           </div>
+        </div>  <div class="col-sm-12 text-center" *ngIf="item== 0 ">
+            <i class="fa fa-exclamation-triangle"></i>
+            <h3 class="text-center">No Record Found</h3>
         </div>
         <div *ngFor="let rfpagency of agency | filter:agensearch" class="col-sm-4 col">
           <div class="col-sm-1 col-xs-1"><i class="fab fa-superpowers" aria-hidden="true"></i></div>
