--- a/src/app/all/all-state/all-state.component.html
+++ b/src/app/all/all-state/all-state.component.html
@@ -39,7 +39,7 @@
               <h3><i class="fa fa-list-alt" aria-hidden="true"></i>All States</h3>
             </div>
             <div class="col-sm-4 text-right">
-              <input type="text" name=query [(ngModel)]="statesearch" #qure1  (change)="filter(qure1.value)" [ngModelOptions]="{standalone: true}" placeholder="Search RFPs"
+              <input type="text" name=query [(ngModel)]="statesearch" #qure1  (keydown)="filter(qure1.value)" [ngModelOptions]="{standalone: true}" placeholder="Search RFPs"
                 class="search-allstates">
               <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
             </div>
