--- a/src/app/all/all-state/all-state.component.html
+++ b/src/app/all/all-state/all-state.component.html
@@ -45,10 +45,10 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 text-center" *ngIf="item== 0 ">
+        <div *ngIf="loaded==true"> <div class="col-sm-12 text-center" *ngIf="(state | filter:statesearch).length==0">
             <i class="fa fa-exclamation-triangle"></i>
             <h3 class="text-center">No Record Found</h3>
-        </div>
+        </div></div>
         <div *ngFor="let rfpstate of state | filter:statesearch" class="col-sm-4 col-lg-4 col-md-4 col-xs-12 col">
           <a class="curser-pointer" [routerLink]="['/state']" [queryParams]="{ state: rfpstate.state}">
             <img class="sh-state-img" src="https://storage.rfpgurus.com/bplrfpgurus/{{rfpstate.icon_image}}" alt="img">
